# mcp-spine

./: .gitignore  README.md  glama.json  pyproject.toml  run_sqlite.py  setup_claude_desktop.ps1  spine_test.toml  test_e2e.py
.github/workflows/: ci.yml
configs/: example.spine.toml
spine/: __init__.py  audit.py  cli.py  config.py  memory.py  minifier.py  protocol.py  proxy.py  router.py  state_guard.py  transport.py
spine/security/: __init__.py  commands.py  env.py  integrity.py  paths.py  policy.py  rate_limit.py  secrets.py  validation.py
tests/: test_config.py  test_memory.py  test_minifier.py  test_proxy_features.py  test_security.py  test_state_guard.py
